tests/NormalTests/paczka2/big_fuzzy/46242017.err
Error in line 1: jHIJ S594 84,5
Error in line 8: ICtryL S502 77,2
Error in line 13: S502 S671 15,0
Error in line 12: ICtryL A292 33,4
Error in line 18: ICtryL S502 28,1
Error in line 16: jHIJ S671 30,4
Error in line 19: ICtryL A292 33,8
Error in line 21: jHIJ A292 53,2
Error in line 37: vK430LA S502 36,6
Error in line 39: XwXX7sC S502 8,8
Error in line 47: D2sughhJVNM S594 10,8
Error in line 49: XwXX7sC A292 80,7
Error in line 48: S502 S671 9,5
Error in line 51: jHIJ S502 73,9
Error in line 56: jHIJ S594 58,2
Error in line 68: ICtryL S671 75,0
Error in line 71: D2sughhJVNM S671 -1,7
Error in line 70: ICtryL A292 33,1
Error in line 73: jHIJ S671 40,1
Error in line 79: XwXX7sC S502 48,0
Error in line 59: D2sughhJVNM S671 6,0
Error in line 81: XwXX7sC S671 98,3
Error in line 82: D2sughhJVNM A292 24,8
Error in line 106: D2sughhJVNM S671 18,9
Error in line 114: S502 S502 89,2
Error in line 108: D2sughhJVNM S502 22,4
Error in line 124: ICtryL S502 36,0
Error in line 133: uzz5qHi S671 -2,7
Error in line 125: uzz5qHi S671 43,6
Error in line 145: uzz5qHi A292 61,5
Error in line 139: jHIJ S594 87,4
Error in line 151: D2sughhJVNM S594 47,6
Error in line 143: vK430LA S502 78,0
Error in line 164: ICtryL S502 59,0
Error in line 180: S502 S671 33,7
Error in line 177: vK430LA S594 5,6
Error in line 186: S502 S594 95,5
Error in line 193: uzz5qHi A292 60,2
Error in line 203: S502 A292 26,2
Error in line 208: D2sughhJVNM S671 124,1
Error in line 212: ICtryL S671 48,5
Error in line 211: jHIJ S594 41,6
Error in line 227: D2sughhJVNM A292 6,1
Error in line 229: D2sughhJVNM S502 49,8
Error in line 223: jHIJ S671 91,6
Error in line 237: D2sughhJVNM S502 26,7
Error in line 240: D2sughhJVNM A292 0,3
